@@ -1,5 +1,12 @@
 package su.nightexpress.nightcore.language;
 
+import java.io.BufferedInputStream;
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.net.URI;
+import java.util.Optional;
+
 import org.bukkit.Keyed;
 import org.bukkit.Material;
 import org.bukkit.World;
@@ -7,114 +14,99 @@ import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.EntityType;
 import org.bukkit.potion.PotionEffectType;
 import org.jetbrains.annotations.NotNull;
+
 import su.nightexpress.nightcore.NightCore;
 import su.nightexpress.nightcore.config.FileConfig;
-import su.nightexpress.nightcore.util.*;
-
-import java.io.BufferedInputStream;
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.net.URL;
-import java.util.Optional;
+import su.nightexpress.nightcore.util.BukkitThing;
+import su.nightexpress.nightcore.util.Colorizer;
+import su.nightexpress.nightcore.util.FileUtil;
+import su.nightexpress.nightcore.util.Placeholders;
+import su.nightexpress.nightcore.util.Plugins;
+import su.nightexpress.nightcore.util.StringUtil;
 
 public class LangAssets {
 
     private static FileConfig config;
 
     public static void load() {
-        NightCore core = Plugins.CORE;
-        String langCode = core.getLanguage();
+        final NightCore core = Plugins.CORE;
+        final String langCode = core.getLanguage();
 
-        String assetsCode = downloadAssets(core, langCode);
-        config = FileConfig.loadOrExtract(core, LangManager.DIR_LANG, getFileName(assetsCode));
+        final String assetsCode = LangAssets.downloadAssets(core, langCode);
+        LangAssets.config = FileConfig.loadOrExtract(core, LangManager.DIR_LANG, LangAssets.getFileName(assetsCode));
     }
 
     @NotNull
-    private static String downloadAssets(@NotNull NightCore plugin, @NotNull String langCode) {
-        File file = new File(plugin.getDataFolder().getAbsolutePath() + LangManager.DIR_LANG, getFileName(langCode));
-        if (file.exists()) return langCode;
+    private static String downloadAssets(@NotNull final NightCore plugin, @NotNull final String langCode) {
+        final File file = new File(plugin.getDataFolder().getAbsolutePath() + LangManager.DIR_LANG, LangAssets.getFileName(langCode));
+        if (file.exists())
+            return langCode;
 
         FileUtil.create(file);
 
-        String url = Placeholders.GITHUB_URL + "/raw/master/assets/" + langCode + ".yml";
-        try (BufferedInputStream in = new BufferedInputStream(new URL(url).openStream());
-             FileOutputStream fileOutputStream = new FileOutputStream(file)) {
+        final String url = Placeholders.GITHUB_URL + "/raw/master/assets/" + langCode + ".yml";
+        try (BufferedInputStream in = new BufferedInputStream(URI.create(url).toURL().openStream());
+                FileOutputStream fileOutputStream = new FileOutputStream(file)) {
             plugin.info("Downloading '" + langCode + "' assets from github...");
-            byte[] dataBuffer = new byte[1024];
+            final byte[] dataBuffer = new byte[1024];
             int bytesRead;
             while ((bytesRead = in.read(dataBuffer, 0, 1024)) != -1) {
                 fileOutputStream.write(dataBuffer, 0, bytesRead);
             }
             return langCode;
-        }
-        catch (IOException exception) {
-            //exception.printStackTrace();
+        } catch (final IOException exception) {
+            // exception.printStackTrace();
             plugin.error("Could not download language assets for '" + langCode + "' (no such assets?).");
-            return LangManager.isDefault(langCode) ? langCode : downloadAssets(plugin, LangManager.DEFAULT_LANGUAGE);
+            return LangManager.isDefault(langCode) ? langCode : LangAssets.downloadAssets(plugin, LangManager.DEFAULT_LANGUAGE);
         }
     }
 
     @NotNull
-    private static String getFileName(@NotNull String langCode) {
-        return "assets_" + langCode + ".yml";
+    private static String getFileName(@NotNull final String langCode) { return "assets_" + langCode + ".yml"; }
+
+    @NotNull
+    public static FileConfig getConfig() { return LangAssets.config; }
+
+    @NotNull
+    public static String get(@NotNull final PotionEffectType type) { return LangAssets.getAsset("PotionEffectType", type); }
+
+    @NotNull
+    public static String get(@NotNull final EntityType type) { return LangAssets.getAsset("EntityType", type); }
+
+    @NotNull
+    public static String get(@NotNull final Material type) { return LangAssets.getAsset("Material", type); }
+
+    @NotNull
+    public static String get(@NotNull final World world) { return LangAssets.getOrCreate("World", world); }
+
+    @NotNull
+    public static String get(@NotNull final Enchantment enchantment) { return LangAssets.getOrCreate("Enchantment", enchantment); }
+
+    @NotNull
+    public static String getAsset(@NotNull final String path, @NotNull final Keyed keyed) {
+        return LangAssets.getAsset(path, BukkitThing.toString(keyed));
     }
 
     @NotNull
-    public static FileConfig getConfig() {
-        return config;
+    public static String getAsset(@NotNull final String path, @NotNull final String nameRaw) {
+        return LangAssets.getAsset(path + "." + nameRaw).orElse(nameRaw);
     }
 
     @NotNull
-    public static String get(@NotNull PotionEffectType type) {
-        return getAsset("PotionEffectType", type);
+    public static Optional<String> getAsset(@NotNull final String path) {
+        return Optional.ofNullable(LangAssets.config.getString(path)).map(Colorizer::apply);
     }
 
     @NotNull
-    public static String get(@NotNull EntityType type) {
-        return getAsset("EntityType", type);
+    public static String getOrCreate(@NotNull final String path, @NotNull final Keyed keyed) {
+        return LangAssets.getOrCreate(path, BukkitThing.toString(keyed));
     }
 
     @NotNull
-    public static String get(@NotNull Material type) {
-        return getAsset("Material", type);
-    }
+    public static String getOrCreate(@NotNull final String path, @NotNull final String nameRaw) {
+        LangAssets.config.addMissing(path + "." + nameRaw, StringUtil.capitalizeUnderscored(nameRaw));
+        LangAssets.config.saveChanges();
 
-    @NotNull
-    public static String get(@NotNull World world) {
-        return getOrCreate("World", world);
-    }
-
-    @NotNull
-    public static String get(@NotNull Enchantment enchantment) {
-        return getOrCreate("Enchantment", enchantment);
-    }
-
-    @NotNull
-    public static String getAsset(@NotNull String path, @NotNull Keyed keyed) {
-        return getAsset(path, BukkitThing.toString(keyed));
-    }
-
-    @NotNull
-    public static String getAsset(@NotNull String path, @NotNull String nameRaw) {
-        return getAsset(path + "." + nameRaw).orElse(nameRaw);
-    }
-
-    @NotNull
-    public static Optional<String> getAsset(@NotNull String path) {
-        return Optional.ofNullable(config.getString(path)).map(Colorizer::apply);
-    }
-
-    @NotNull
-    public static String getOrCreate(@NotNull String path, @NotNull Keyed keyed) {
-        return getOrCreate(path, BukkitThing.toString(keyed));
-    }
-
-    @NotNull
-    public static String getOrCreate(@NotNull String path, @NotNull String nameRaw) {
-        config.addMissing(path + "." + nameRaw, StringUtil.capitalizeUnderscored(nameRaw));
-        config.saveChanges();
-
-        return getAsset(path, nameRaw);
+        return LangAssets.getAsset(path, nameRaw);
     }
 }
